header wrap fixed

--- a/src/styles/about-me/_about-me.scss
+++ b/src/styles/about-me/_about-me.scss
@@ -1,7 +1,7 @@
 
 .about-me{
   height: 100vh;
-  background: grey;
+  // background: grey;
   padding: 90px 45px 0 45px;
   z-index: 10;
   color: #eaeaea;
