--- a/src/styles/landing/_photo.scss
+++ b/src/styles/landing/_photo.scss
@@ -9,26 +9,31 @@
     }
   }
 }
+.landing--inactive{
+  .landing__photo{
+    &:after{
+      animation: none;
+    }
+  }
+}
 @media screen and (min-width: 750px){
   .landing{
     &__photo{
       display: block;
       position: relative;
       overflow: hidden;
-      // transition: all 0.1s linear;
+      transition: all 0.05s linear;
       &::after{
         content: url('https://images.unsplash.com/photo-1486074051793-e41332bf18fc?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ');
         position: absolute;
         opacity: 0;
+        //animation: photoGlitch 2s alternate-reverse infinite;
         z-index: 1;
         top: 0;
         left: 0;
         transform: translate(0, 0) scale(1);
         width: 100%;
         height: 100%;  
-      }
-      &::after{
-        animation: photoGlitch 2s alternate-reverse infinite;
       }
     }
   }
